Bug 1144103 - Support screen recording r=mwu